# rust-polymarket-trading-bot

./: .gitignore  Cargo.toml  README.md  config.json.example  package.json  simulation.toml  threshold-strategy.config.example.json
frontend/: package.json
history/: market_1773145800_prices.toml
src/: api.rs  api.ts  clob.ts  config.rs  config.ts  main-dual-limit-045.ts  main.ts  period.ts  strategy-test-report.ts  trading-assets.ts  trading-history.ts  types.ts
src/strategy/threshold/: config.ts  index.ts  period-pnl.ts  position-manager.ts  pricing.ts  threshold-executor.ts  threshold-strategy.ts  types.ts
